# Aiko-chan

./: .env.example  .gitignore  README.md  TESTING.md  aiko.html  biome.json  cli.py  docker-compose.yml  identity.py  main.py  migrate.py  package-lock.json  package.json  practice.py  pyproject.toml  pytest.ini  requirements.txt  soul.md  speak_kokoro.py.bak  sysinfo.py  test.py  tui.py
agentic/: SKILLS.md  agentic.py  capability.py  checkpoint.py  experience.py  graph_checkpoints.db  schema.py  skills.py  tools.py  wiki.py
agentic/router/: capability_prompts.json  intent_prompts.json
agentic/skillsets/: JAPANESE_TUTOR.md  SELF_IMPROVE.md
agentic/toolkit/: common.py  job_hunt.py  organize.py  photography.py  plan.py  reports.py  research.py  self_improve.py  social.py  synthesize.py
archive/: check_memory_roles.py  gesture.js  memorize_(memo+qdrant).py  memory_db_audit.py  migrate.py  migrate_embeddings.py  test-3d-model.html  test_asr.py  tts_test.py  video-3d-model-animation.html
archive/memory/: memory.db-shm  memory.db-shm.bak  memory.db.bak
archive/persona/: aiko.html
backend/modal/: flux2-klein.py  krea2.py  osrm.py
cli/: auth.py
cognition/: __init__.py  reason.py  reflect.py  think.py
config/: agent.yaml  agentic.yaml  bioclock.yaml  cognition.yaml  experience.yaml  identity.yaml  index.yaml  interface.yaml  knowledge.py  knowledge.yaml  learn.py  learn.yaml  listen.yaml  llm.yaml  log.yaml  logging.yaml  memorize.yaml  memory.yaml  proactive.yaml  reflect.yaml  reflection.yaml  routing.yaml  schedule.yaml  sensory.yaml  skills.yaml  social.yaml  speak.yaml  system.yaml  think.yaml  ui.yaml  voice.yaml  web.yaml  wiki.yaml
core/: __init__.py  agentic.py  bioclock.py  brain.py  concurrency.py  config.py  consolidate.py  databank.py  database.py  dream.py  embed.py  experience.py  forget.py  health.py  journal.py  knowledge.py  learn.py  listen.py  log.py  memorize.py  memory.py  monthly.py  persona.py  rag.py  reason.py  reflect.py  schedule.py  secure.py  skills.py  social.py  speak.py  think.py  tools.py  user_context.py  userspace.py  wakeup.py  weekly_social.py  wiki.py
core/toolkit/: __init__.py  architecture.py  common.py  job.py  job_hunt.py  job_hunter.py  organizer.py  photo.py  photo_grader.py  planner.py  planning.py  researcher.py  scheduling.py  system_architect.py  web.py
demo/: app.py
demo/ui/: css.py  vrm.py
docs/: ARCHITECTURE.md  DEBUG_AUDIO.md  HISTORY.md  INSTALL.md  MULTI_USER.md  ROADMAP.md  TESTS.md  debug_audio.md  test_checklist.md
eval/: eval_memory_extraction.py  eval_memory_recall.py
interface/cli/: auth.py  cli.py
interface/webui/: auth.py  webui.py
kb/: __init__.py  lint.py
memory/: consolidate.py  data_access.py  embed.py  forget.py  journal.py  knowledge.py  learn.py  memorize.py  reflect.py  vecstore.py
persona/: CODING_CHAT.md  JAPANESE_CHAT.md  SOCIAL.md  SOUL (Lalah).md  SOUL (default).md  SOUL.md  character.md  edit-dotenv.sh  identity.md  router_prompts.json  schedule.md  skills.md  soul.md  user.md
scratch/: test_split.py
searxng/: settings.yml
sensory/: listen.py  speak.py
skills/: SKILLS.md  agentic.py  capability.py  evaluate.py  experience.py  graph_agent.py  photo_social.py  schedule.md  schema.py  skills.md  skills.py  social.py  wiki.py
skills/aiko_architect/: SKILL.md
skills/aurora_forecast_watch/: SKILL.md
skills/coding_tutor/: SKILL.md
skills/japanese_tutor/: SKILL.md
skills/job_hunt/: SKILL.md
skills/job_search/: skill.md
skills/skillsets/: CODING_TUTOR.md  JOB_HUNT.md  aurora_forecast.md  job_hunt.json  job_hunt.md  nature_photo.md  self-improve.md  self_improve.md
skills/wildlife_photo/: SKILL.md
system/: __init__.py  bioclock.py  config.py  databank.py  health.py  log.py  orchestrate.py  schedule.py  secure.py  userspace.py  wakeup.py
tests/: README.md  SOUL.md  benchmark_harrier.py  benchmark_sensevoice.py  conftest.py  test_agentic_fallback.py  test_asr.py  test_graph_agent.py  test_long_prompts.json  test_memorize.py  test_prompts.json  test_route.py  test_schema.py  test_secure.py  test_social_threads.py  test_speak_remote_audio.py  test_userspace.py
tests/error/: README.md
tests/eval/: test_evaluation.py
tests/functionality/: README.md
tests/integration/: README.md  test_agentic_fallback.py  test_agentic_pipeline.py  test_multiuser_isolation.py  test_route.py
tests/load/: README.md
tests/perf/: benchmark_agentic.py  benchmark_memory.py  benchmark_wakeup.py
tests/performance/: README.md
tests/stability/: README.md
tests/stress/: test_agentic_stress.py  test_write_queue_stress.py
tests/system/: README.md
tests/unit/: README.md  test_agentic_agentic.py  test_agentic_capability.py  test_agentic_research.py  test_agentic_schema.py  test_agentic_synthesize.py  test_config.py  test_memorize.py  test_memory_knowledge.py  test_social_threads.py  test_tts.py  test_userspace.py  test_wakeup.py
toolkit/: __init__.py  common.py  job_hunt.py  organize.py  photography.py  plan.py  research.py  self_improve.py  social.py  tools.py
training/: aiko_training_data_v3.json  aiko_training_data_v4.json  conscience_dataset_gen.py  extended_training_data_v2.json  extended_training_data_with_nihongo_v3.json  modal_generate_aiko.py  sample_data.json
training/conscience/: README.md  (+4 more)
tui/: identity.py  tui.py
user/: enroll_speak.py
util/: bench_intent_routing.py  bench_memory_extraction.py  benchmark_needle_vs_ministral.py  check_learned.py  edit-dotenv.sh  encrypt_memory.py  enroll_speak.py  harrier_embedder.py  lint.py  memory_db_audit.py  migrate_daily_blocks.py  migrate_daily_journal.py  migrate_embeddings.py  needle_onnx_infer.py  prompt.json  test-minimax-m3.txt  test_prompts.json  test_route.py  vrm-video.html  vrm-webcam.html
webui/: aiko.html  aiko_web.py  auth.py  webui.py
wiki/: DIRECTORY_MAP.md  OPERATING_PROCEDURE.md  agentic_workflow.md  kb_governance.md  knowledge_policy.md  runtime_state.md
workspace/: schedule.json
(+69 files in other folders)
