[project]
requires-python = ">=3.12,<3.13"
name = "Aiko-chan"
version = "0.1.5"
description = "Aiko-chan: AI companion with persistent memory, web search, and conversational interface"
readme = "README.md"
dependencies = [
    "click>=8.4.1",
    "coloredlogs>=15.0.1",
    "fastembed>=0.8.0",
    "flatbuffers>=25.12.19",
    "numpy>=2.4.6",
    "onnxruntime-gpu>=1.27.0.dev0",
    "openai>=2.43.0",
    "packaging>=26.2",
    "protobuf>=6.33.6",
    "python-dotenv>=1.0.0",
    "reazonspeech-k2-asr",
    "requests>=2.34.2",
    "scipy>=1.17.1",
    "silero-vad>=6.2.1",
    "sounddevice>=0.5.5",
    "soundfile>=0.14.0",
    "sqlite-vec>=0.1.9",
    "sympy>=1.14.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
]

[tool.uv]
# no override-dependencies needed

[tool.uv.sources]
reazonspeech-k2-asr = { path = "../reazonspeech/pkg/k2-asr" }
onnxruntime-gpu = { index = "ort-cuda-13-nightly" }

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"

[[tool.uv.index]]
name = "ort-cuda-13-nightly"
url = "https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/ort-cuda-13-nightly/pypi/simple/"
explicit = true
