[project]
requires-python = ">=3.12,<3.13"
name = "Aiko-chan"
version = "0.1.5"
description = "Aiko-chan: AI companion with persistent memory, web search, and conversational interface"
readme = "README.md"
dependencies = [
    "coloredlogs>=15.0.1",
    "flatbuffers>=25.12.19",
    "httpx>=0.28.1",
    "huggingface-hub>=1.21.0",
    "itsdangerous>=2.2.0",
    "ninja>=1.13.0",
    "numpy<2",
    "onnxruntime-gpu==1.24.4; platform_machine == 'x86_64'",
    "openai>=2.43.0",
    "packaging>=26.2",
    "protobuf>=6.33.6",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.0.0",
    "requests>=2.34.2",
    "scipy<1.18.0",
    "sherpa-onnx>=1.13.3",
    "silero-vad>=6.2.1",
    "sounddevice>=0.5.5",
    "soundfile>=0.14.0",
    "sqlite-vec>=0.1.9",
    "sympy>=1.14.0",
    "tokenizers>=0.23.1",
    "torch>=2.12.1; platform_machine == 'x86_64'",
    "torchaudio>=2.11.0; platform_machine == 'x86_64'",
    "torchvision>=0.27.1; platform_machine == 'x86_64'",
    "trafilatura>=2.1.0",
    "websockets>=16.0",
    "psutil>=7.2.2",
    "onnxruntime-gpu",
    "fastapi>=0.139.0",
]

[tool.uv]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu132"
default = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"

[tool.uv.sources]
onnxruntime-gpu = { path = "onnxruntime_gpu-1.24.4-cp312-cp312-linux_aarch64.whl", marker = "platform_machine == 'aarch64'"}
